# learn-rust-crud

./: Cargo.toml  LICENSE  README.md  env.example
docs/: TESTING.md  WASM_GUIDE.md
examples/: wasm_demo.sh
math/: BYTES_RESULT.txt  Cargo.toml  build.sh
math/src/: lib.rs
postman/: POSTMAN_SETUP.md  postman_collection.json  postman_environment.json  postman_environment_production.json
src/: auth.rs  main.rs  models.rs  state.rs
src/handlers/: create.rs  delete.rs  execute.rs  mod.rs  read.rs  update.rs
test/: 0_login.sh  10_test_wasm_execute.sh  11_test_advanced_wasm.sh  1_create.sh  2_read_all.sh  3_read_one.sh  4_update.sh  5_delete.sh  6_run_all_tests.sh  8_test_jwt.sh  9_test_refresh_token.sh  cleanup.sh  run_all_tests.sh  test_jwt.sh  test_jwt_expiration.sh  test_wasm_complete.sh
tests/: README.md  integration_auth.rs  integration_crud.rs  integration_errors.rs  integration_execute.rs
tests/common/: mod.rs
