[package]
name = "learn-rust-crud"
version = "0.2.0"
edition = "2024"
description = "Simple CRUD API built with Rust and Tide framework"
license = "MIT"
authors = ["Daniel R Gorgonha <danielgorgonha@gmail.com>"]
repository = "https://github.com/danielgorgonha/learn-rust-crud"
homepage = "https://github.com/danielgorgonha/learn-rust-crud"
documentation = "https://docs.rs/learn-rust-crud"
keywords = ["crud", "api", "web", "tide", "rust", "rest"]
categories = ["web-programming", "api-bindings"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = "0.16.0"
jsonwebtoken = "8.0"
chrono = { version = "0.4", features = ["serde"] }
