[package]
name = "learn-rust-crud"
version = "0.4.0"
edition = "2024"
description = "CRUD API with WebAssembly integration built with Rust and Tide framework"
license = "MIT"
authors = ["Daniel R Gorgonha <danielgorgonha@gmail.com>"]
repository = "https://github.com/danielgorgonha/learn-rust-crud"
homepage = "https://github.com/danielgorgonha/learn-rust-crud"
documentation = "https://docs.rs/learn-rust-crud"
keywords = ["crud", "api", "web", "tide", "rust", "rest", "wasm", "webassembly"]
categories = ["web-programming", "api-bindings"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tide = "0.16.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
wasmi = "0.46.0"
tracing = "0.1"
tracing-subscriber = "0.3"
